--- a/GraphQLServer/appsettings.Development.json
+++ b/GraphQLServer/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5433;Database=usersdb2;Username=postgres;Password=password"
   }
 }
