--- a/GraphQLServer/GraphQLServer.csproj
+++ b/GraphQLServer/GraphQLServer.csproj
@@ -12,7 +12,9 @@
     <PackageReference Include="GraphQL.Server.Ui.GraphiQL" Version="5.0.2" />
     <PackageReference Include="GraphQL.Server.Ui.Voyager" Version="5.0.2" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="12.1.0" />
+    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="12.3.2" />
     <PackageReference Include="HotChocolate.Data" Version="12.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.12" />
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.12" />
